Fix question navigation flex from sometimes wrapping (again)

--- a/app/client/stylesheets/smartervote.import.less
+++ b/app/client/stylesheets/smartervote.import.less
@@ -360,9 +360,9 @@
   display: flex;
   
   button {
-    -webkit-flex: 0 0 28%;
-    -ms-flex: 0 0 28%;
-    flex: 0 0 28%;
+    -webkit-flex: 0.25 1 24%;
+    -ms-flex: 0.25 1 24%;
+    flex: 0.25 1 24%;
     
     padding: 0;
     
@@ -390,9 +390,9 @@
   }
   
   #gotoEvaluation {
-    -webkit-flex: 1 1 43%;
-    -ms-flex: 1 1 43%;
-    flex: 1 1 43%;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
     
     border: @border-default;
     border-top: 0;
